2004-09-17  Bruno Haible  <bruno@clisp.org>

	* clx/mit-clx/dependent.lisp (conditional-store): Rewrite to avoid
	multiple evaluation of subforms.

	* clx/mit-clx/depdefs.lisp: Ensure that :CLX-LITTLE-ENDIAN is
	declared in *features* on little-endian platforms.

2004-09-18  Bruno Haible  <bruno@clisp.org>

	* clos-class3.lisp (compute-slots-<slotted-class>-around,
	create-shared-slots-vector): Fix bug in 2004-09-12 patch.

2004-09-17  Bruno Haible  <bruno@clisp.org>

	* condition.lisp (print-object@condition): Fix typo in 2004-09-14
	patch.

2004-09-17  Bruno Haible  <bruno@clisp.org>

	* condition.lisp (define-condition, handler-case, restart-bind): Pass
	both :FORM and :DETAIL when signalling a source-program-error.

2004-09-17  Bruno Haible  <bruno@clisp.org>

	* constsym.d (CUSTOM:*DEFUN-ACCEPT-SPECIALIZED-LAMBDA-LIST*,
	SYS::SPECIALIZED-LAMBDA-LIST-TO-ORDINARY): Align C names.
	* spvw.d (init_symbol_values): Update.
	* eval.d (get_closure): Update.
	* misc.d (SYS::SET-ANSI): Update.

2004-09-17  Bruno Haible  <bruno@clisp.org>

	* init.lisp (remove-old-definitions, open-for-load,
	specialized-lambda-list-to-ordinary, defun): Fix indentation. Use
	'when' instead of 'if' without else-branch.

2004-09-16  Bruno Haible  <bruno@clisp.org>

	* init.lisp: Export metaobject, specializer, eql-specializer,
	compute-effective-method.
	* clos-package.lisp: Likewise.

2004-09-16  Bruno Haible  <bruno@clisp.org>

	* utils/clispload.lsp (*expected-failures*): Many new failures to be
	revisited.

2004-09-16  Bruno Haible  <bruno@clisp.org>

	* clos-slotdef1.lisp (structure-effective-slot-definition): Provide
	different initforms for efm-svuc etc.
	(initialize-instance-<structure-effective-slot-definition>): Initialize
	the slots efm-svuc etc.
	* clos-class3.lisp (compute-slot-location-table-entry): Make it work
	for STRUCTURE-CLASS classes.

2004-09-15  Sam Steingold  <sds@gnu.org>

	* modules/bindings/win32/win32.lisp (SE_ERROR, SHOW_COMMAND): new enums